# YYKANPAN

./: .dockerignore  .env.example  .gitignore  .review_2026-07-01_system_check.md  IMPROVEMENTS_NO_LLM.md  INSPECTION_REPORT.md  LICENSE  PATCH_HISTORY.md  PETITE_VUE_MIGRATION.md  README.md  SERVER_GUIDE.md  TODO.md  create_issues.ps1  daily_collect.ps1  docker-compose.yml  pyproject.toml  requirements.txt  watchlist_cn_sample.json
.claude/: settings.local.json
data/: sentiment_config.json  sentiment_history-10-173-15-118.json  sentiment_history.json  sentiment_last_known-10-173-15-118-2.json  sentiment_last_known-10-173-15-118.json
data/strategies/: conservative.yaml  dividend.yaml  rule_v1.yaml
data/wxfile/: 2026-06-30_closing.md  2026-06-30_intraday.md  2026-06-30_opening.md  2026-07-01_closing.md  (+6 more)
docker/: Dockerfile  docker-entrypoint.sh
docs/: ADR.md  API.md  OPS_RUNBOOK.md  advisor-spec.md  cards-spec.md  paper-trade-spec.md  quant-spec.md  risk-events-spec.md
src/: analysis.py  app.py  collect_stocks.py  config.py  providers.py  sentiment.py  server.py  summary.py  time_utils.py
static/: index.html
tests/: TEST_PLAN.md  conftest.py  smoke_test.py  test_advisor.py  test_analysis.py  test_autodev.py  test_autodev_runner.py  test_config.py  test_decision.py  test_decision_quality.py  test_new_features.py  test_providers.py  test_screener.py  test_sentiment.py  test_server_csv.py  test_server_trading.py  test_strategy_loader.py  test_time_utils.py  test_watchlist.py  test_wechat_oa.py  test_wxfile_extras.py  test_xgxz.py
win_tool/: debug_cards.py
(+19 files in other folders)
