[project]
name = "yykanpan"
version = "2.0.0"
requires-python = ">=3.14"
dependencies = [
    "akshare>=1.18.58",
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "pandas>=3.0.2",
    "yfinance>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
# smoke_test.py hits real network endpoints and is meant to be run manually
# via `python tests/smoke_test.py`, not under the default pytest collection.
python_files = ["test_*.py"]
